# tradfri-hue-workaround

./: README.md  pyproject.toml  revive-server.py  revive_server.py  server_config.py  settings_by_modelid.py  tradfri_hue_revive.py  tradfri_hue_workaround.py
